<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/ll_custom_dialog_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_createPlaylist"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_playlist_add_black_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/create_playlist"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_new_playlist"
        android:text="@string/new_playlist"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_popPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/layout_song"/>

    <EditText
        android:id="@+id/et_list_name"
        android:inputType="text"
        android:hint="@string/type_name"
        android:paddingStart="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/bt_cancel"
            android:text="@string/cancel"
            android:padding="10dp"
            android:layout_toStartOf="@id/bt_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/bt_create"
            android:text="@string/create"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>