<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_fav"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/favourites"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/tv_play_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/play_lists"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_recently_played"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="@string/recently_played"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />
                <TextView
                    android:id="@+id/tvSeeAllRecentlyPlayed"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:padding="10dp"
                    android:text="@string/see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp" />
            </FrameLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/holo_red_dark" />
            <FrameLayout
                android:padding="10dp"
                android:minHeight="100dp"
                android:id="@+id/containerRecentlyplayed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!--<android.support.v7.widget.CardView
        android:id="@+id/cv_recents"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="5dp">



    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_fav"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="5dp">



    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_play_lists"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="5dp">



    </android.support.v7.widget.CardView>-->

</LinearLayout>