<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.agarwal.vinod.govindkigali.fragments.SettingsFragment">

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="100dp"-->
            <!--android:orientation="horizontal">-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/profile_pic"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />

                <TextView
                    android:id="@+id/id_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_image"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:text="Sign in"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_image"
                    android:text="Himanshu Singhal"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_name"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/profile_image"
                    android:text="himanshu.singhal116@gmail.com"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/profile_image"
                    android:textSize="14sp"
                    android:visibility="invisible" />

            </RelativeLayout>

        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/subscribe_button_height"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="SUBSCRIBE"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_margin="1dp"
                app:cardElevation="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/settings_change_language" />

                <Switch
                    android:id="@+id/id_Language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_margin="1dp"
                app:cardElevation="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/settings_night_mode" />

                <Switch
                    android:id="@+id/id_NightMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_margin="1dp"
                android:layout_weight="1"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/feedback_img_v"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/about" />

                    <TextView
                        android:id="@+id/id_Feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/feedback_img_v"
                        android:text="@string/settings_feedback"
                        android:textAlignment="center" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_margin="1dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:id="@+id/id_RateApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/rate_us_img_v"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/rate_us" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/rate_us_img_v"
                        android:text="@string/settings_rate_app"
                        android:textAlignment="center" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_margin="1dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:id="@+id/id_ShareApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/share_app_img_v"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/share" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/share_app_img_v"
                        android:text="@string/settings_share_app"
                        android:textAlignment="center" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_margin="1dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:id="@+id/id_AboutApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/id_AboutApp_img_v"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/about" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/id_AboutApp_img_v"
                        android:text="@string/settings_about_app"
                        android:textAlignment="center" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_margin="1dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:id="@+id/id_dedicated_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/id_dedicated_to_img_v"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/dedicated" />

                    <TextView
                        android:id="@+id/id_dedicatedTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/id_dedicated_to_img_v"
                        android:text="@string/settings_dedicated_to"
                        android:textAlignment="center" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:visibility="invisible"
                android:id="@+id/id_log_out"
                android:layout_margin="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_logout"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />


            </android.support.v7.widget.CardView>


        </LinearLayout>


    </LinearLayout>


</ScrollView>